bk_ida/gccida/c0/ereal_from_int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ereal_from_int/src/real.c:1321:63: error: must use 'enum' tag to refer to type 'machine_mode'
void  ereal_from_int( realvaluetype *d, __int64 i, __int64 j, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ereal_from_int/src/real.c:1330:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+34h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ereal_from_int/src/real.c:1339:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ereal_from_int/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ereal_from_int/src/obj/real.o] Error 1
